@@ -886,11 +886,6 @@ operator|.
 name|getDirectory
 argument_list|()
 decl_stmt|;
-name|int
-name|upto
-init|=
-literal|0
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -921,22 +916,19 @@ name|infos
 operator|.
 name|info
 argument_list|(
-name|upto
+name|i
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
+assert|assert
 name|info
 operator|.
 name|dir
 operator|==
 name|dir
-condition|)
-block|{
+assert|;
 name|readers
 index|[
-name|upto
-operator|++
+name|i
 index|]
 operator|=
 name|writer
@@ -952,7 +944,6 @@ argument_list|,
 name|termInfosIndexDivisor
 argument_list|)
 expr_stmt|;
-block|}
 name|success
 operator|=
 literal|true
@@ -969,14 +960,14 @@ block|{
 comment|// Close all readers we had opened:
 for|for
 control|(
-name|upto
+name|i
 operator|--
 init|;
-name|upto
+name|i
 operator|>=
 literal|0
 condition|;
-name|upto
+name|i
 operator|--
 control|)
 block|{
@@ -984,7 +975,7 @@ try|try
 block|{
 name|readers
 index|[
-name|upto
+name|i
 index|]
 operator|.
 name|close
@@ -1009,46 +1000,6 @@ name|writer
 operator|=
 name|writer
 expr_stmt|;
-if|if
-condition|(
-name|upto
-operator|<
-name|readers
-operator|.
-name|length
-condition|)
-block|{
-comment|// This means some segments were in a foreign Directory
-name|SegmentReader
-index|[]
-name|newReaders
-init|=
-operator|new
-name|SegmentReader
-index|[
-name|upto
-index|]
-decl_stmt|;
-name|System
-operator|.
-name|arraycopy
-argument_list|(
-name|readers
-argument_list|,
-literal|0
-argument_list|,
-name|newReaders
-argument_list|,
-literal|0
-argument_list|,
-name|upto
-argument_list|)
-expr_stmt|;
-name|readers
-operator|=
-name|newReaders
-expr_stmt|;
-block|}
 name|initialize
 argument_list|(
 name|readers
